# TuxTalk

./: README.md  flake.nix
daemon/: Cargo.toml
daemon/config/: postinst  tuxtalk.service
daemon/src/: audio_capture.rs  commands.rs  config.rs  ipc.rs  main.rs  whisper.rs
examples/base_config/: config.toml
