[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dasp_sample = "0.11.0"
whisper-rs = "0.10"
env_logger = "0.10"
notify = "5.1"
cpal = "0.15"
toml = "0.5"
dirs = "4.0"
log = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 4
debug = false